--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,10 @@
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
+
+Metrics/LineLength:
+  Max: 160
+
 # Offense count: 1
 # Cop supports --auto-correct.
 Style/BlockComments:
